[package]
name = "rust_voice"
version = "0.1.3"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
cpal = "0.16.0"
hound = "3.5.1"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(windows)'.wants]
windows_subsystem = "windows"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
